# nudge

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml  personas.yaml  settings.py
docs/: SPEC.md  architecture.html  architecture.md  prompt.md
frontend/: index.html
scripts/: run_server.py  run_simulation.py  run_single_conversation.py
src/: llm.py
src/agents/: base.py  customer_agent.py  rule_customer.py  sales_agent.py
src/agents/prompts/: coupon_judge.py  customer_system.py  sales_system.py
src/api/: main.py
src/conversation/: engine.py  rules.py  turn.py
src/csms/: connection.py  queries.py  revenue.py
src/evaluation/: aggregator.py  dimensions.py  evaluator.py  schema.py  statistics.py
src/personas/: loader.py  schema.py  selector.py
src/ralph/: act.py  hypothesize.py  learn.py  loop.py  persistent_loop.py  plan.py  probability.py  probability_v2.py  reason.py  strategy.py
src/storage/: database.py  models.py  repository.py
